# vulkan-overlay-layer

./: .gitmodules  README  README.md  build.sh  build32.txt  meson.build
scripts/: loader_genvk.py
src/: VkLayer_NUUDEL_overlay.json  dispatch.hpp  layer.cpp  meson.build  overlay.cpp  overlay.frag  overlay.hpp  overlay.vert  stats.cpp  stats.hpp
src/vks/: VulkanBuffer.hpp  VulkanDevice.hpp  VulkanTools.cpp  VulkanTools.h
